testsuites/LLT/compiler/Diagnose/lex_test/lex_unknown_suffix/case2.expect.out
error: unknown suffix 'f64' for number literal
  ==> case2.cj:11:11:
   | 
11 | var b1= 16f64
   |           ^^^ unknown suffix 'f64'
   | 

1 error generated, 1 error printed.
